# chess-outcome-prediction

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: games.csv  modeling_dataset.csv  run_summary.json
data/raw/groups/: example.json
data/raw/player_stats/: example.json
data/raw/players/: example.json
data/raw/rounds/: example.json
data/raw/tournaments/: example.json
notebooks/: chess_outcome_model.html  chess_outcome_model.ipynb
src/: build_features.py  chess_api.py  events.py  features.py  make_dataset.py  parsing.py
src/features/: __init__.py  _temporal.py  build.py  head_to_head.py  matchup.py  pregame.py  rating.py  recent_form.py  tournament_form.py
tests/: test_chess_api.py  test_features.py  test_make_dataset.py  test_parsing.py
tests/features/: test_build_features.py  test_events.py  test_head_to_head.py  test_matchup.py  test_pregame.py  test_rating.py  test_recent_form.py  test_temporal.py  test_tournament_form.py
