[project]
name = "chess-outcome-prediction"
version = "0.1.0"
description = "Collect Chess.com Titled Tuesday data for pre-game outcome prediction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_configs = true
exclude = ["notebooks", "scratch"]

# pandas/numpy ship no type stubs; treat them as untyped third-party imports.
[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*"]
ignore_missing_imports = true

# pandas' public API returns ``Any`` in many places; relax the two strict
# checks that this triggers for the DataFrame-based feature layer only.
[[tool.mypy.overrides]]
module = ["features.*", "build_features"]
warn_return_any = false
disallow_any_generics = false

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
